# lab1

./: Automaton.h  CMakeLists.txt  CommentAutomata.cpp  CommentAutomata.h  DatalogProgram.cpp  DatalogProgram.h  IDAutomaton.cpp  IDAutomaton.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Rule.cpp  Rule.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  UndefinedString.cpp  UndefinedString.h  lab1  lab2  main.cpp
INPUT/: test1
lab1.dSYM/Contents/Resources/DWARF/: lab1
lab2.dSYM/Contents/Resources/DWARF/: lab2
